[build-system]
requires = ["setuptools>=61.0", "cibuildwheel", "auditwheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-moss"
version = "1.2.6"
description = "MObility Simulation System"
authors = [
  { name = "Jun Zhang", email = "zhangjun990222@gmail.com" },
  { name = "Wenxuan Ao", email = "aowx21@outlook.com" },
  { name = "Junbo Yan", email = "yanjb20thu@gmali.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "shapely>=2",
  "protobuf>=3.20,<5",
  "numpy>=1.20,<2",
  "pycityproto>=2,<3",
  "numba>=0.60",
  "tqdm",
  "psycopg[binary,pool]>=3.0,<4",
  "pymongo",
  "pyproj",
  "stringcase",
  "ray[default]>=2.0,<3",
]

[project.urls]
Homepage = "https://moss.fiblab.net"
Repository = "https://github.com/tsinghua-fib-lab/moss.git"
Issues = "https://github.com/tsinghua-fib-lab/moss/issues"

[tool.setuptools.packages.find]
where = [
  "python/src",
] # list of folders that contain the packages (["."] by default)

[tool.cibuildwheel]
build = "cp3*manylinux_x86_64"
skip = ["cp36-*", "cp37-*", "cp38-*"]

[tool.cibuildwheel.linux]
before-all = "./python/before-all-manylinux.sh"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
